Fix spacing issue with collapsible container.

--- a/app/assets/stylesheets/components/editorial/_collapsible.scss
+++ b/app/assets/stylesheets/components/editorial/_collapsible.scss
@@ -43,7 +43,7 @@
   border-right: 1px solid $color-action-item-border;
   border-bottom: 2px solid $color-action-item-border;
   padding: $bl*2;
-  margin-top: -$bl*3;
+  margin: -$bl*3 0 $bl*3 0;
 }
 
 .collapsible-section.js-active {
